update manifest and config

--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "repos": [
     {
       "id": "fantasyleague",
-      "organisation": "lnbits",
+      "organisation": "talvasconcelos",
       "repository": "fantasyleague"
     }
   ]
