--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "name": "Fantasy League",
   "short_description": "Football Fantasy League",
-  "tile": "https://raw.githubusercontent.com/lnbits/fantasyleague/main/static/bitcoin-extension.png",
+  "tile": "/fantasyleague/main/static/fantasyleague.png",
   "min_lnbits_version": "0.12.6",
   "donate": "donate@legend.lnbits.com",
   "contributors": [
@@ -13,16 +13,16 @@
   ],
   "images": [
     {
-      "uri": "https://raw.githubusercontent.com/lnbits/fantasyleague/main/static/1.png"
+      "uri": "https://raw.githubusercontent.com/talvasconcelos/fantasyleague/main/static/1.png"
     },
     {
-      "uri": "https://raw.githubusercontent.com/lnbits/fantasyleague/main/static/2.png"
+      "uri": "https://raw.githubusercontent.com/talvasconcelos/fantasyleague/main/static/2.png"
     },
     {
-      "uri": "https://raw.githubusercontent.com/lnbits/fantasyleague/main/static/3.png"
+      "uri": "https://raw.githubusercontent.com/talvasconcelos/fantasyleague/main/static/3.png"
     }
   ],
-  "description_md": "https://raw.githubusercontent.com/lnbits/fantasyleague/main/description.md",
-  "terms_and_conditions_md": "https://raw.githubusercontent.com/lnbits/fantasyleague/main/toc.md",
+  "description_md": "https://raw.githubusercontent.com/talvasconcelos/fantasyleague/main/description.md",
+  "terms_and_conditions_md": "https://raw.githubusercontent.com/talvasconcelos/fantasyleague/main/toc.md",
   "license": "MIT"
 }
